Fixed alignment bug

--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -6,6 +6,7 @@
 .con h1 {
   color: #000 !important;
   margin-bottom: 0;
+  text-align: unset !important;
 }
 
 .services {
